# CommonHealth-public

./: CLAUDE.md  CONCEPT.md  DESIGN.md  EVIDENCE.md  OPEN_PROBLEMS.md  PI_TRACK_RECORD.md  PROJECT_AUDIT_2026-05-12.md  README.md  STATE.md  STRATEGY.md  THEORY.md  llm  pi.md
.github/workflows/: aim-rust-ci.yml
AIM/: .gitignore  CLAUDE_README.md  GENERATE_CORE.md  PROJECT_AUDIT_2026-05-12.md  README.md  TBPR_CLAUDE_PROMPT.md  aim_cli.py  db.py  i18n.py  lab_reference.py  llm.py  medical_system.py  pyproject.toml  registry.json  tbpr_3level.py  tbpr_project_overnight.py  tbpr_project_overnight_v2.py  telegram_bot.py
AIM/DiffDiagnosis/: DESIGN.md  EVIDENCE.md  OPEN_PROBLEMS.md  README.md  STATE.md  THEORY.md  _build_kernel.py
AIM/SSA/: DESIGN.md  EVIDENCE.md  OPEN_PROBLEMS.md  README.md  STATE.md  THEORY.md  _build_kernel.py
AIM/agents.bak.20260428/: chat.py  embed_daemon.py  graph.py  memory_index.py  patient_memory.py
AIM/agents.bak.20260428_234922/: __init__.py  embed_daemon.py  graph.py  memory_store.py
AIM/agents.bak.20260429_002559/: graph.py  graphrag.py  intake.py  labs.py  memory_index.py
AIM/agents.bak.20260429_005521/: graph.py
AIM/agents.bak.20260429_011515/: graph.py  kernel.py  speculative.py
AIM/agents.bak.20260429_013335/: graph.py
AIM/agents.bak.20260429_015121/: cost_monitor.py  (+3 more)
AIM/rust-core/crates/aim-ai-dashboard/: Cargo.toml
AIM/rust-core/crates/aim-ai-dashboard/src/: lib.rs
AIM/rust-core/crates/aim-ai-self-modify/: Cargo.toml
AutomatedMicroscopy/: CONCEPT.md
BioSense/: CLAUDE.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  PARAMETERS.md  TODO.md  UPGRADE.md
CDATA/: CONCEPT.md  PARAMETERS.md  README.md
EpigeneticDrift/: AGENTS.md  CONCEPT.md  PARAMETERS.md
FCLC/: CLAUDE.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  PARAMETERS.md  UPGRADE.md
HAP/: CLAUDE.md  CONCEPT.md  EVIDENCE.md  PARAMETERS.md  STATE.md
HAP/backend/: Cargo.toml
HAP/backend/src/: lib.rs  main.rs
MCOA/: CONCEPT.md  CONCEPT.md.bak  Cargo.toml  EVIDENCE.md  PARAMETERS.md  PI_BIO.md  PROJECT_AUDIT_2026-05-12.md  STATE.md  THEORY.md
MitoROS/: AGENTS.md  CONCEPT.md  PARAMETERS.md
Ontogenesis/: STATE.md
Proteostasis/: AGENTS.md  CONCEPT.md  PARAMETERS.md
Telomere/: CONCEPT.md  PARAMETERS.md
Ze/: CLAUDE.md  CONCEPT.md  DESIGN.md  EVIDENCE.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  OPEN_PROBLEMS.md  PARAMETERS.md  README.md  STATE.md  THEORY.md  TODO.md  UPGRADE.md
server/: AUDIT.md
web/: RUST_PHOENIX_MIGRATION_PLAN.md
(+282 files in other folders)
