[package]
name = "hap_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "hap_backend"
path = "src/lib.rs"

[[bin]]
name = "hap_backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
argon2 = "0.5"

[dev-dependencies]
# "offline" feature removed in sqlx 0.7 (replaced by SQLX_OFFLINE env var + sqlx-cli prepare).
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
[workspace]
