[package]
name = "aim-ai-self-modify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIM AI — code self-modification framework (S6, gate closed). Refuses to mutate until baseline is mature (≥28 daily runs over ≥28 d). Rust port of AI/ai/self_modify.py."

[dependencies]
aim-ai-ledger = { path = "../aim-ai-ledger" }

serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
